// See README.md for information and build instructions.
//
// Note: START and END tags are used in comments to define sections used in
// tutorials.  They are not part of the syntax for Protocol Buffers.
//
// To get an in-depth walkthrough of this file and the related examples, see:
// https://developers.google.com/protocol-buffers/docs/tutorials

// [START declaration]
syntax = "proto3";
package storage;

import "GenericValue.proto";
// [END declaration]

// [START java_declaration]
option java_multiple_files = true;
option java_package = "mases.entityframeworkcore.knet.serialization.protobuf";
option java_outer_classname = "ProtobufKeyContainer";
// [END java_declaration]

// [START csharp_declaration]
option csharp_namespace = "MASES.EntityFrameworkCore.KNet.Serialization.Protobuf.Storage";
// [END csharp_declaration]

// [START messages]
message PrimaryKeyType {
  repeated GenericValue values = 1; 
}

// Our address book file is just one of these.
message ProtobufKeyContainer {
  PrimaryKeyType PrimaryKey = 1;
}
// [END messages]